--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "@mapbox/mapbox-gl-geocoder": "^3.1.4",
     "@rails/webpacker": "3.5",
+    "aos": "^2.3.4",
     "bootstrap": "^4.3.1",
     "jquery": "^3.3.1",
     "mapbox-gl": "^0.53.1",
