--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@rails/webpacker": "3.5",
     "aos": "^2.3.4",
     "bootstrap": "^4.3.1",
+    "flatpickr": "^4.5.7",
     "jquery": "^3.3.1",
     "mapbox-gl": "^0.53.1",
     "popper.js": "^1.14.7",
